--- a/canvas2png_demo2_with_audio_file.htm
+++ b/canvas2png_demo2_with_audio_file.htm
@@ -1,16 +1,13 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 	<title>Abstract Equalizer/Animation using Mozilla Audio Data API, HTML5, Ajax, Three.js </title>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-
 	<link href="css/style.css" rel="stylesheet" type="text/css">
 	<link href="css/sif_discussion.css" rel="stylesheet" type="text/css">
-
 	<script src="js/mozilla/dsp.js"></script>
 	<script src="js/mozilla/sif_discussion.js"></script>
-
-	<script language="JavaScript">
+	<script>
 		function init_page() {
 			visualizer(); // start visualizer listener
 		}
@@ -25,7 +22,7 @@
 			<canvas id="fft" width="20" height="20"></canvas>
 		</div>
 		<div style="">
-			<audio src="media/Maran_Project_iDream.ogg" id="input" controls="true" style="" onloadedmetadata="loadedMetaData(event);"></audio>
+			<audio src="media/Maran_Project_iDream.ogg" id="input" style="" onloadedmetadata="loadedMetaData(event);"></audio>
 		</div>
 		<div>
 			<canvas id="canvas-draw-fancy"></canvas>
@@ -34,7 +31,7 @@
 	</div>
 
 	<!-- Mozilla Audio Data API -->
-	<script language="JavaScript" src="js/mozilla/firefoxAudioController.js"></script>
+	<script src="js/mozilla/firefoxAudioController.js"></script>
 
 	<!-- jquery -->
 	<script src="js/jquery_1.js"></script>
