--- a/canvas2png_demo2_with_audio_file.htm
+++ b/canvas2png_demo2_with_audio_file.htm
@@ -1,56 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>Abstract Equalizer/Animation using Mozilla Audio Data API, HTML5, Ajax, Three.js </title>
-	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-	<link href="css/style.css" rel="stylesheet" type="text/css">
-	<link href="css/sif_discussion.css" rel="stylesheet" type="text/css">
-	<script src="js/mozilla/dsp.js"></script>
-	<script src="js/mozilla/sif_discussion.js"></script>
-	<script>
-		function init_page() {
-			visualizer(); // start visualizer listener
-		}
-		window.onload = init_page;
-	</script>
+    <title>Abstract Equalizer/Animation using Mozilla Audio Data API, HTML5, Ajax, Three.js </title>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <link href="css/style.css" rel="stylesheet" type="text/css">
+    <link href="css/sif_discussion.css" rel="stylesheet" type="text/css">
+    <script src="js/mozilla/dsp.js"></script>
+    <script src="js/mozilla/sif_discussion.js"></script>
+    <script>
+        function init_page() {
+            visualizer(); // start visualizer listener
+        }
+
+        window.onload = init_page;
+    </script>
 </head>
 
 <body>
 
-	<div id="container">
-		<div>
-			<canvas id="fft" width="20" height="20"></canvas>
-		</div>
-		<div style="">
-			<audio src="media/Maran_Project_iDream.ogg" id="input" style="" onloadedmetadata="loadedMetaData(event);"></audio>
-		</div>
-		<div>
-			<canvas id="canvas-draw-fancy"></canvas>
-		</div>
-		<div class="clearall"></div>
-	</div>
+<div id="container">
+    <div>
+        <canvas id="fft" width="20" height="20"></canvas>
+    </div>
+    <div style="">
+        <audio src="media/Maran_Project_iDream.ogg" id="input" style=""
+               onloadedmetadata="loadedMetaData(event);"></audio>
+    </div>
+    <div>
+        <canvas id="canvas-draw-fancy"></canvas>
+    </div>
+    <div class="clearall"></div>
+</div>
 
-	<!-- Mozilla Audio Data API -->
-	<script src="js/mozilla/firefoxAudioController.js"></script>
+<!-- Mozilla Audio Data API -->
+<script src="js/mozilla/firefoxAudioController.js"></script>
 
-	<!-- jquery -->
-	<script src="js/jquery_1.js"></script>
+<!-- jquery -->
+<script src="js/jquery_1.js"></script>
 
-	<!-- threejs libs -->
-	<script src="js/threejs/Three.js"></script>
-	<script src="js/threejs/RequestAnimationFrame.js"></script>
-	<script src="js/threejs/Cube.js"></script>
-	<script src="js/threejs/Plane.js"></script>
-	<script src="js/threejs/Tween.js"></script>
-	<script src="js/threejs/Stats.js"></script> 
+<!-- threejs libs -->
+<script src="js/threejs/Three.js"></script>
+<script src="js/threejs/RequestAnimationFrame.js"></script>
+<script src="js/threejs/Cube.js"></script>
+<script src="js/threejs/Plane.js"></script>
+<script src="js/threejs/Tween.js"></script>
+<script src="js/threejs/Stats.js"></script>
 
-	<!-- custom code for animation -->
-	<script type="text/javascript"  src="js/CustomAnimation.js"></script>
+<!-- custom code for animation -->
+<script type="text/javascript" src="js/CustomAnimation.js"></script>
 
-	<!-- recorder - ajax png sender to php png writer -->
-	<script type="text/javascript"  src="js/RecorderAnimation.js"></script>
-		
-	<script type="text/javascript"></script>
+<!-- recorder - ajax png sender to php png writer -->
+<script type="text/javascript" src="js/RecorderAnimation.js"></script>
+
+<script type="text/javascript"></script>
 
 </body>
 </html>
